html first coding structure
In this commit, I made the code for the html file

--- a/index.html
+++ b/index.html
@@ -2,10 +2,183 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Jujutsu Kaise Character Build</title>
-</head>
+    </head>
 <body>
+    <header>
+        <img src="#" id="main-logo" alt="Jujutsu Kaisen Logo">
+        <h1 class="hidden">All about the good and the bad guys</h1>
+    </header>
+
+    <main>
+        <nav id="character_nav">
+            <ul class="characters">
+                <li>
+                    <a href="lightbox1">
+                        <div class="sprite" id="Itadori"></div>
+                        <h3>Yuji Itadori</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="lightbox2">
+                        <div class="sprite" id="Gojo"></div>
+                        <h3>Satoru Gojo</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="lightbox3">
+                        <div class="sprite" id="Megumi"></div>
+                        <h3>Megumi Fushiguro</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="lightbox4">
+                        <div class="sprite" id="Todo"></div>
+                        <h3>Aoi Todo</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="lightbox5">
+                        <div class="sprite" id="Toji"></div>
+                        <h3>Toji Fushiguro</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="lightbox6">
+                        <div class="sprite" id="Mahito"></div>
+                        <h3>Mahito</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="lightbox7">
+                        <div class="sprite" id="Geto"></div>
+                        <h3>Suguru Geto</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="lightbox8">
+                        <div class="sprite" id="Sukuna"></div>
+                        <h3>Sukuna</h3>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <section id="instructions">
+            <h3>Choose your favorite Hero or Villain!</h3>
+            <p>Use your mouse to hover & click to discover about them</p>
+        </section>
+    </main>
+
+    <footer class="sticky-footer">
+        <h3>All images &copy; MAPPA Studio</h3>
+    </footer>
+
+<!-- LIGHTBOX -->
+
+    <section class="lightbox" id="lightbox1">
+        <a href="#" class="lightbox_close">X</a>
+        <article>
+            <h3 class="lb_heading">Yuji Itadori</h3>
+            <p class="lb_text">
+                Yuji Itadori is the main protagonist of the Jujutsu Kaisen series. He is the son of Jin Itadori and Kaori Itadori, and the grandson of Wasuke Itadori. Yuji was living a normal life in Sendai City until he encountered Megumi and ate one of Sukuna's fingers. After becoming Sukuna's vessel, Yuji began attending Tokyo Jujutsu High alongside Megumi and Nobara as first-year students.
+            </p>
+            <p class="lb_text">
+                Yuji Itadori is a compassionate young man with a strong moral compass. He values all human life and prioritizes ensuring a "proper death" for others. This deep respect for life prevents him from taking a human life unless absolutely necessary. Despite his seriousness, Yuji exhibits a vibrant personality through humor, enthusiasm for training, and genuine care for his comrades. While initially naive about the world of Jujutsu Sorcery, Yuji is a quick learner who adapts quickly and possesses a strong determination bordering on stubbornness. Witnessing the cruelty of curses ignites a fierce anger within him, particularly towards Mahito. However, Yuji's defining characteristic is his unwavering selflessness. Driven by his grandfather's final words, he readily sacrifices himself for others, as exemplified by swallowing Sukuna's finger to save a complete stranger.
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="lightbox2">
+        <a href="#" class="lightbox_close">X</a>
+        <article>
+            <h3 class="lb_heading">Satoru Gojo</h3>
+            <p class="lb_text">
+                Satoru Gojo is one of the main protagonists of the Jujutsu Kaisen series. He is a special grade jujutsu sorcerer and widely recognized as the strongest in the world. Satoru is the pride of the Gojo Clan, the first person to inherit both the Limitless and the Six Eyes in four hundred years. He works as a teacher at the Tokyo Jujutsu High and uses his influence to protect and train strong young allies.
+            </p>
+            <p class="lb_text">
+                Satoru Gojo is a powerful and complex Jujutsu Sorcerer. Despite his normally nonchalant and playful demeanor, he possesses immense confidence bordering on arrogance, believing himself to be invincible. This arrogance fuels a ruthless streak against enemies and sorcerer executives he deems weak. However, beneath the surface lies a surprising depth. He holds a deep-seated desire to reform the Jujutsu world and cares deeply for those he respects, as shown by his grief over the death of his friend and student. Though capable of cold-blooded tactics in battle, he prioritizes protecting the innocent. Satoru's ultimate goal is to nurture a new generation of strong Jujutsu Sorcerers, ones who could potentially challenge him and create a brighter future for the Jujutsu world.
+            </p>
+        </article>
+    </section>
+    
+    <section class="lightbox" id="lightbox3">
+        <a href="#" class="lightbox_close">X</a>
+        <article>
+            <h3 class="lb_heading">Megumi Fushiguro</h3>
+            <p class="lb_text">
+                Megumi Fushiguro is the deuteragonist of the Jujutsu Kaisen series. He is a grade 2 jujutsu sorcerer and first-year student at Tokyo Jujutsu High alongside Yuji Itadori and Nobara Kugisaki. Megumi is the step-brother of Tsumiki Fushiguro and as the son of Toji Fushiguro, Megumi is also a descendant of the Zenin Clan. Megumi was born outside the clan as Toji's trump card and was eventually found by Satoru Gojo, who mentored him and enrolled him at Jujutsu High as his student.
+            </p>
+            <p class="lb_text">
+                Megumi Fushiguro is a complex character defined by his stoic demeanor and unwavering sense of justice. Despite his outward coldness, Megumi possesses a deep well of compassion, particularly for his sister Tsumiki. Initially jaded about the jujutsu world, Megumi's encounter with Yuji Itadori reignited his determination to become a sorcerer and save people. However, he remains conflicted, struggling with the violence inherent in his duty while refusing to be swayed by traditional sorcerer hierarchies. Megumi's reserved nature often creates distance between him and others. He prioritizes actions over words, which can come across as harsh or even ruthless. Yet, his fierce loyalty to his comrades and unwavering resolve to protect those he cares about paint a more complete picture of the man beneath the stoic facade.
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="lightbox4">
+        <a href="#" class="lightbox_close">X</a>
+        <article>
+            <h3 class="lb_heading">Aoi Todo</h3>
+            <p class="lb_text">
+                Aoi Todo is a supporting character in the Jujutsu Kaisen series. He is a third-year student at Kyoto Jujutsu High School and a grade 1 jujutsu sorcerer. He was mentored by Yuki Tsukumo in his youth and considers Yuji Itadori his best friend.
+            </p>
+            <p class="lb_text">
+                Aoi Todo is a powerful and eccentric Jujutsu sorcerer with a surprising depth. Despite his initial meathead persona and obsession with his favorite idol Takada-chan, Todo possesses strong philosophical views on cursed energy and the nature of being a sorcerer. He craves excitement and hates boredom, leading him to seek out worthy opponents and judge others based on their taste in women.  While his boisterous personality can be off-putting, Todo is fiercely loyal to his friends, particularly Yuji Itadori, and demonstrates surprising intelligence and strategic thinking in critical moments.
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="lightbox5">
+        <a href="#" class="lightbox_close">X</a>
+        <article>
+            <h3 class="lb_heading">Toji Fushiguro</h3>
+            <p class="lb_text">
+                Toji Fushiguro, born Toji Zenin, is a recurring character in the Jujutsu Kaisen series. He was a former member of the Zenin clan and the infamous assassin known as the Sorcerer Killer, contracted by the Time Vessel Association among other groups throughout his time as a non-curse user. He was also the father of Megumi Fushiguro and former enemy of Satoru Gojo. While working for the Star Religious Group, Toji serves as the primary antagonist of the Gojo's Past Arc.
+            </p>
+            <p class="lb_text">
+                Toji Fushiguro, a skilled assassin known as the "Sorcerer Killer," lived a life driven by pragmatism and resentment. Despite lacking cursed energy, he outsmarted powerful sorcerers with his jujutsu knowledge and cold calculations. He prioritized financial gain over loyalty, taking jobs from shady clients and even planning to sell his son, Megumi, to the Zenin clan for their cursed technique potential. Toji's past within the sorcerer world fueled his bitterness. Rejected by the Zenin clan for lacking cursed energy, his wife's kindness temporarily softened him, but her death led him back to a ruthless path. Though his final mission pitted him against the strongest sorcerer, Satoru Gojo, Toji prioritized a personal vendetta against the jujutsu system over his own survival. Despite his tragic demise, Toji's last act – revealing Megumi's future to Gojo – inadvertently secured his son's safety and future as a sorcerer.
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="lightbox6">
+        <a href="#" class="lightbox_close">X</a>
+        <article>
+            <h3 class="lb_heading">Mahito</h3>
+            <p class="lb_text">
+                Mahito is one of the primary antagonists of the Jujutsu Kaisen series. He is an unregistered special grade cursed spirit allied with Pseudo-Geto. He is also the leader of his own group, consisting of Jogo, Hanami, and Dagon. His group's ultimate goal is the eradication of humanity and ultimately replacing the population with cursed spirits.
+            </p>
+            <p class="lb_text">
+                Mahito, a sadistic cursed spirit, embodies human hatred and desires their eradication. Despite lacking self-preservation and prioritizing the cursed spirits' reign, he manipulates human emotions with chilling effectiveness. Preying on Junpei's vulnerabilities, Mahito twisted him into a vengeful curse user, showcasing his disturbing ability to turn sorrow into destruction. While playful and philosophical, Mahito reveals a deep fear when his own safety is threatened. His initial amusement at Yuji's attacks evaporates when faced with genuine resolve, exposing him as a cruel yet cowardly villain who relished tormenting others but crumbles upon facing his own demise.
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="lightbox7">
+        <a href="#" class="lightbox_close">X</a>
+        <article>
+            <h3 class="lb_heading">Suguru Geto</h3>
+            <p class="lb_text">
+                Suguru Geto is an antagonist in both the Jujutsu Kaisen series and its prequel Jujutsu Kaisen 0: Jujutsu High. He was originally a student of Masamichi Yaga's alongside Satoru Gojo and Shoko Ieiri at Tokyo Jujutsu High. His experiences as a jujutsu sorcerer bred a deep hatred for non-sorcerers, leading to an incident where Suguru massacred over a hundred civilians in a single night. He was expelled from Jujutsu High and came to be known as the worst of all curse users.
+            </p>
+            <p class="lb_text">
+                Suguru Geto, a Jujutsu sorcerer, underwent a complex transformation from a kind student to a ruthless villain. Initially believing in protecting non-sorcerers ("monkeys"), a tragic event and his best friend's immense power shattered his faith. Torn between duty and disdain, he questioned the purpose of protecting those who create curses. After a series of losses and philosophical discussions, Suguru embraced his hatred, becoming a curse user who advocated for a world ruled solely by sorcerers. Though his methods were extreme, Suguru's journey reflects a broken system and the struggle to find meaning in a world filled with suffering.
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="lightbox8">
+        <a href="#" class="lightbox_close">X</a>
+        <article>
+            <h3 class="lb_heading">Ryomen Sukuna</h3>
+            <p class="lb_text">
+                Ryomen Sukuna, often shortened to Sukuna, is a legendary figure in the Jujutsu Kaisen universe. Revered as the undisputed King of Curses and one of the series' primary antagonists, Sukuna's power and ruthlessness are unmatched. Existing for over a thousand years, his story intertwines with the very foundation of Jujutsu society.
+            </p>
+            <p class="lb_text">
+                Originally known as the Disgraced One, Sukuna was a sorcerer of immense power during the Heian Era. Feared as an Imaginary Demon, he clashed with sorcerers of the Golden Age, ultimately proving too strong. However, upon his demise, Sukuna defied the natural order by transforming into a cursed object – his power fragmenting into twenty indestructible fingers. This act of defiance cemented his legacy as the King of Curses. Fast forward to modern times, Sukuna is inadvertently reawakened when Yuji Itadori consumes one of his fingers. Initially trapped within Yuji, Sukuna occasionally takes control, showcasing his immense power and sadistic nature. He revels in violence and displays a complete disregard for human life, viewing humans as mere insects unworthy of happiness. Despite his arrogance, Sukuna possesses a keen intellect. He manipulates situations to his advantage, even resorting to hostage-taking to further his goals. While brutal and sadistic, Sukuna exhibits a warped sense of respect, acknowledging the strength of worthy opponents. His philosophy seems rooted in social Darwinism, believing the weak deserve their suffering and should simply accept their fate. His inability to comprehend human emotions and desire for connection further solidifies him as a powerful yet ultimately isolated entity.
+            </p>
+        </article>
+    </section>
     
 </body>
 </html>
