Created CSS file
In this commit I update the design of my HTML with CSS, also made some changes in my HTML file and copy my images in images folder

--- a/index.html
+++ b/index.html
@@ -2,63 +2,66 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <title>Jujutsu Kaise Character Build</title>
-    </head>
+</head>
 <body>
     <header>
-        <img src="#" id="main-logo" alt="Jujutsu Kaisen Logo">
+        <img src="./images/logo_jjk.png" id="main-logo" alt="Jujutsu Kaisen Logo">
         <h1 class="hidden">All about the good and the bad guys</h1>
     </header>
 
     <main>
         <nav id="character_nav">
             <ul class="characters">
-                <li>
+                <li class="li_blue">
                     <a href="lightbox1">
-                        <div class="sprite" id="Itadori"></div>
+                        <div class="sprite" id="itadori"></div>
                         <h3>Yuji Itadori</h3>
                     </a>
                 </li>
-                <li>
+                <li class="li_blue">
                     <a href="lightbox2">
-                        <div class="sprite" id="Gojo"></div>
+                        <div class="sprite" id="gojo"></div>
                         <h3>Satoru Gojo</h3>
                     </a>
                 </li>
-                <li>
+                <li class="li_blue">
                     <a href="lightbox3">
-                        <div class="sprite" id="Megumi"></div>
+                        <div class="sprite" id="megumi"></div>
                         <h3>Megumi Fushiguro</h3>
                     </a>
                 </li>
-                <li>
+                <li class="li_blue">
                     <a href="lightbox4">
-                        <div class="sprite" id="Todo"></div>
+                        <div class="sprite" id="todo"></div>
                         <h3>Aoi Todo</h3>
                     </a>
                 </li>
-                <li>
+                <li class="li_red">
                     <a href="lightbox5">
-                        <div class="sprite" id="Toji"></div>
+                        <div class="sprite" id="toji"></div>
                         <h3>Toji Fushiguro</h3>
                     </a>
                 </li>
-                <li>
+                <li class="li_red">
                     <a href="lightbox6">
-                        <div class="sprite" id="Mahito"></div>
+                        <div class="sprite" id="mahito"></div>
                         <h3>Mahito</h3>
                     </a>
                 </li>
-                <li>
+                <li class="li_red">
                     <a href="lightbox7">
-                        <div class="sprite" id="Geto"></div>
+                        <div class="sprite" id="geto"></div>
                         <h3>Suguru Geto</h3>
                     </a>
                 </li>
-                <li>
+                <li class="li_red">
                     <a href="lightbox8">
-                        <div class="sprite" id="Sukuna"></div>
+                        <div class="sprite" id="sukuna"></div>
                         <h3>Sukuna</h3>
                     </a>
                 </li>
@@ -66,7 +69,7 @@
         </nav>
         <section id="instructions">
             <h3>Choose your favorite Hero or Villain!</h3>
-            <p>Use your mouse to hover & click to discover about them</p>
+            <p>Use your mouse to hover / click to discover about them</p>
         </section>
     </main>
 
@@ -77,7 +80,7 @@
 <!-- LIGHTBOX -->
 
     <section class="lightbox" id="lightbox1">
-        <a href="#" class="lightbox_close">X</a>
+        <a href="" class="lightbox_close">X</a>
         <article>
             <h3 class="lb_heading">Yuji Itadori</h3>
             <p class="lb_text">
@@ -90,7 +93,7 @@
     </section>
 
     <section class="lightbox" id="lightbox2">
-        <a href="#" class="lightbox_close">X</a>
+        <a href="" class="lightbox_close">X</a>
         <article>
             <h3 class="lb_heading">Satoru Gojo</h3>
             <p class="lb_text">
@@ -103,7 +106,7 @@
     </section>
     
     <section class="lightbox" id="lightbox3">
-        <a href="#" class="lightbox_close">X</a>
+        <a href="" class="lightbox_close">X</a>
         <article>
             <h3 class="lb_heading">Megumi Fushiguro</h3>
             <p class="lb_text">
@@ -116,7 +119,7 @@
     </section>
 
     <section class="lightbox" id="lightbox4">
-        <a href="#" class="lightbox_close">X</a>
+        <a href="" class="lightbox_close">X</a>
         <article>
             <h3 class="lb_heading">Aoi Todo</h3>
             <p class="lb_text">
@@ -129,7 +132,7 @@
     </section>
 
     <section class="lightbox" id="lightbox5">
-        <a href="#" class="lightbox_close">X</a>
+        <a href="" class="lightbox_close">X</a>
         <article>
             <h3 class="lb_heading">Toji Fushiguro</h3>
             <p class="lb_text">
@@ -142,7 +145,7 @@
     </section>
 
     <section class="lightbox" id="lightbox6">
-        <a href="#" class="lightbox_close">X</a>
+        <a href="" class="lightbox_close">X</a>
         <article>
             <h3 class="lb_heading">Mahito</h3>
             <p class="lb_text">
@@ -155,7 +158,7 @@
     </section>
 
     <section class="lightbox" id="lightbox7">
-        <a href="#" class="lightbox_close">X</a>
+        <a href="" class="lightbox_close">X</a>
         <article>
             <h3 class="lb_heading">Suguru Geto</h3>
             <p class="lb_text">
@@ -168,7 +171,7 @@
     </section>
 
     <section class="lightbox" id="lightbox8">
-        <a href="#" class="lightbox_close">X</a>
+        <a href="" class="lightbox_close">X</a>
         <article>
             <h3 class="lb_heading">Ryomen Sukuna</h3>
             <p class="lb_text">
