--- a/index.html
+++ b/index.html
@@ -18,49 +18,49 @@
         <nav id="character_nav">
             <ul class="characters">
                 <li class="li_blue">
-                    <a href="lightbox1">
+                    <a href="#lightbox1">
                         <div class="sprite" id="itadori"></div>
                         <h3>Yuji Itadori</h3>
                     </a>
                 </li>
                 <li class="li_blue">
-                    <a href="lightbox2">
+                    <a href="#lightbox2">
                         <div class="sprite" id="gojo"></div>
                         <h3>Satoru Gojo</h3>
                     </a>
                 </li>
                 <li class="li_blue">
-                    <a href="lightbox3">
+                    <a href="#lightbox3">
                         <div class="sprite" id="megumi"></div>
                         <h3>Megumi Fushiguro</h3>
                     </a>
                 </li>
                 <li class="li_blue">
-                    <a href="lightbox4">
+                    <a href="#lightbox4">
                         <div class="sprite" id="todo"></div>
                         <h3>Aoi Todo</h3>
                     </a>
                 </li>
                 <li class="li_red">
-                    <a href="lightbox5">
+                    <a href="#lightbox5">
                         <div class="sprite" id="toji"></div>
                         <h3>Toji Fushiguro</h3>
                     </a>
                 </li>
                 <li class="li_red">
-                    <a href="lightbox6">
+                    <a href="#lightbox6">
                         <div class="sprite" id="mahito"></div>
                         <h3>Mahito</h3>
                     </a>
                 </li>
                 <li class="li_red">
-                    <a href="lightbox7">
+                    <a href="#lightbox7">
                         <div class="sprite" id="geto"></div>
                         <h3>Suguru Geto</h3>
                     </a>
                 </li>
                 <li class="li_red">
-                    <a href="lightbox8">
+                    <a href="#lightbox8">
                         <div class="sprite" id="sukuna"></div>
                         <h3>Sukuna</h3>
                     </a>
@@ -82,7 +82,7 @@
     <section class="lightbox" id="lightbox1">
         <a href="" class="lightbox_close">X</a>
         <article>
-            <h3 class="lb_heading">Yuji Itadori</h3>
+            <h3 class="lb_heading_blue">Yuji Itadori</h3>
             <p class="lb_text">
                 Yuji Itadori is the main protagonist of the Jujutsu Kaisen series. He is the son of Jin Itadori and Kaori Itadori, and the grandson of Wasuke Itadori. Yuji was living a normal life in Sendai City until he encountered Megumi and ate one of Sukuna's fingers. After becoming Sukuna's vessel, Yuji began attending Tokyo Jujutsu High alongside Megumi and Nobara as first-year students.
             </p>
@@ -95,7 +95,7 @@
     <section class="lightbox" id="lightbox2">
         <a href="" class="lightbox_close">X</a>
         <article>
-            <h3 class="lb_heading">Satoru Gojo</h3>
+            <h3 class="lb_heading_blue">Satoru Gojo</h3>
             <p class="lb_text">
                 Satoru Gojo is one of the main protagonists of the Jujutsu Kaisen series. He is a special grade jujutsu sorcerer and widely recognized as the strongest in the world. Satoru is the pride of the Gojo Clan, the first person to inherit both the Limitless and the Six Eyes in four hundred years. He works as a teacher at the Tokyo Jujutsu High and uses his influence to protect and train strong young allies.
             </p>
@@ -108,7 +108,7 @@
     <section class="lightbox" id="lightbox3">
         <a href="" class="lightbox_close">X</a>
         <article>
-            <h3 class="lb_heading">Megumi Fushiguro</h3>
+            <h3 class="lb_heading_blue">Megumi Fushiguro</h3>
             <p class="lb_text">
                 Megumi Fushiguro is the deuteragonist of the Jujutsu Kaisen series. He is a grade 2 jujutsu sorcerer and first-year student at Tokyo Jujutsu High alongside Yuji Itadori and Nobara Kugisaki. Megumi is the step-brother of Tsumiki Fushiguro and as the son of Toji Fushiguro, Megumi is also a descendant of the Zenin Clan. Megumi was born outside the clan as Toji's trump card and was eventually found by Satoru Gojo, who mentored him and enrolled him at Jujutsu High as his student.
             </p>
@@ -121,7 +121,7 @@
     <section class="lightbox" id="lightbox4">
         <a href="" class="lightbox_close">X</a>
         <article>
-            <h3 class="lb_heading">Aoi Todo</h3>
+            <h3 class="lb_heading_blue">Aoi Todo</h3>
             <p class="lb_text">
                 Aoi Todo is a supporting character in the Jujutsu Kaisen series. He is a third-year student at Kyoto Jujutsu High School and a grade 1 jujutsu sorcerer. He was mentored by Yuki Tsukumo in his youth and considers Yuji Itadori his best friend.
             </p>
@@ -134,7 +134,7 @@
     <section class="lightbox" id="lightbox5">
         <a href="" class="lightbox_close">X</a>
         <article>
-            <h3 class="lb_heading">Toji Fushiguro</h3>
+            <h3 class="lb_heading_red">Toji Fushiguro</h3>
             <p class="lb_text">
                 Toji Fushiguro, born Toji Zenin, is a recurring character in the Jujutsu Kaisen series. He was a former member of the Zenin clan and the infamous assassin known as the Sorcerer Killer, contracted by the Time Vessel Association among other groups throughout his time as a non-curse user. He was also the father of Megumi Fushiguro and former enemy of Satoru Gojo. While working for the Star Religious Group, Toji serves as the primary antagonist of the Gojo's Past Arc.
             </p>
@@ -147,7 +147,7 @@
     <section class="lightbox" id="lightbox6">
         <a href="" class="lightbox_close">X</a>
         <article>
-            <h3 class="lb_heading">Mahito</h3>
+            <h3 class="lb_heading_red">Mahito</h3>
             <p class="lb_text">
                 Mahito is one of the primary antagonists of the Jujutsu Kaisen series. He is an unregistered special grade cursed spirit allied with Pseudo-Geto. He is also the leader of his own group, consisting of Jogo, Hanami, and Dagon. His group's ultimate goal is the eradication of humanity and ultimately replacing the population with cursed spirits.
             </p>
@@ -160,7 +160,7 @@
     <section class="lightbox" id="lightbox7">
         <a href="" class="lightbox_close">X</a>
         <article>
-            <h3 class="lb_heading">Suguru Geto</h3>
+            <h3 class="lb_heading_red">Suguru Geto</h3>
             <p class="lb_text">
                 Suguru Geto is an antagonist in both the Jujutsu Kaisen series and its prequel Jujutsu Kaisen 0: Jujutsu High. He was originally a student of Masamichi Yaga's alongside Satoru Gojo and Shoko Ieiri at Tokyo Jujutsu High. His experiences as a jujutsu sorcerer bred a deep hatred for non-sorcerers, leading to an incident where Suguru massacred over a hundred civilians in a single night. He was expelled from Jujutsu High and came to be known as the worst of all curse users.
             </p>
@@ -173,7 +173,7 @@
     <section class="lightbox" id="lightbox8">
         <a href="" class="lightbox_close">X</a>
         <article>
-            <h3 class="lb_heading">Ryomen Sukuna</h3>
+            <h3 class="lb_heading_red">Ryomen Sukuna</h3>
             <p class="lb_text">
                 Ryomen Sukuna, often shortened to Sukuna, is a legendary figure in the Jujutsu Kaisen universe. Revered as the undisputed King of Curses and one of the series' primary antagonists, Sukuna's power and ruthlessness are unmatched. Existing for over a thousand years, his story intertwines with the very foundation of Jujutsu society.
             </p>
@@ -182,6 +182,6 @@
             </p>
         </article>
     </section>
-    
+
 </body>
 </html>
