Html Css Validator
In this commit, I fixed some errors the HTML and the CSS had, accordingly, with the validator.

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 <!-- LIGHTBOX -->
 
     <section class="lightbox" id="lightbox1">
+        <h2 class="hidden">Yuji Itadori</h2>
         <a href="" class="lightbox_close">X</a>
         <article>
             <h3 class="lb_heading_blue">Yuji Itadori</h3>
@@ -93,6 +94,7 @@
     </section>
 
     <section class="lightbox" id="lightbox2">
+        <h2 class="hidden">Satoru Gojo</h2>
         <a href="" class="lightbox_close">X</a>
         <article>
             <h3 class="lb_heading_blue">Satoru Gojo</h3>
@@ -106,6 +108,7 @@
     </section>
     
     <section class="lightbox" id="lightbox3">
+        <h2 class="hidden">Megumi Fushiguro</h2>
         <a href="" class="lightbox_close">X</a>
         <article>
             <h3 class="lb_heading_blue">Megumi Fushiguro</h3>
@@ -119,6 +122,7 @@
     </section>
 
     <section class="lightbox" id="lightbox4">
+        <h2 class="hidden">Aoi Todo</h2>
         <a href="" class="lightbox_close">X</a>
         <article>
             <h3 class="lb_heading_blue">Aoi Todo</h3>
@@ -132,6 +136,7 @@
     </section>
 
     <section class="lightbox" id="lightbox5">
+        <h2 class="hidden">Toji Fushiguro</h2>
         <a href="" class="lightbox_close">X</a>
         <article>
             <h3 class="lb_heading_red">Toji Fushiguro</h3>
@@ -145,6 +150,7 @@
     </section>
 
     <section class="lightbox" id="lightbox6">
+        <h2 class="hidden">Mahito</h2>
         <a href="" class="lightbox_close">X</a>
         <article>
             <h3 class="lb_heading_red">Mahito</h3>
@@ -158,6 +164,7 @@
     </section>
 
     <section class="lightbox" id="lightbox7">
+        <h2 class="hidden">Suguru Geto</h2>
         <a href="" class="lightbox_close">X</a>
         <article>
             <h3 class="lb_heading_red">Suguru Geto</h3>
@@ -171,6 +178,7 @@
     </section>
 
     <section class="lightbox" id="lightbox8">
+        <h2 class="hidden">Ryomen Sukuna</h2>
         <a href="" class="lightbox_close">X</a>
         <article>
             <h3 class="lb_heading_red">Ryomen Sukuna</h3>
